--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,13 @@ name: CI
 
 on:
   pull_request:
-    branches: [main]
+    branches: [main, integration]
   push:
-    branches: [main]
+    branches: [main, integration]
 
 jobs:
   lint-and-build:
+    name: Lint, Validate, and Build
     runs-on: ubuntu-latest
 
     steps:
@@ -20,8 +21,23 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Restore Next.js cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            .next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
       - name: Install dependencies
         run: npm ci
+
+      - name: Run Prettier check
+        run: npx prettier --check .
+
+      - name: Validate Prisma schema
+        run: npx prisma validate
 
       - name: Run lint
         run: npm run lint
