--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,14 @@ jobs:
 
       - name: Validate Prisma schema
         run: npx prisma validate
+        env:
+          DATABASE_URL: "file:./dev.db"
 
       - name: Run lint
         run: npm run lint
 
       - name: Run build
         run: npm run build
+        env:
+          DATABASE_URL: "file:./dev.db"
+          JWT_SECRET: "dummy-secret-for-ci-build"
