--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@v3
+        env:
+          DATABASE_URL: "file:./dev.db"
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
