--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-# Database connection (SQLite for dev, PostgreSQL for prod)
-DATABASE_URL="file:./dev.db"
+# Database (Neon PostgreSQL)
+# Tip: Add &connect_timeout=30 to the URL for better stability in serverless environments
+DATABASE_URL="postgresql://user:password@host-pooler.region.aws.neon.tech/neondb?sslmode=require"
+DIRECT_URL="postgresql://user:password@host.region.aws.neon.tech/neondb?sslmode=require"
 
-# JWT signing secret (MUST be changed in production)
+# Auth
 # Generate with: openssl rand -base64 32
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 
@@ -10,3 +12,7 @@ NODE_ENV="development"
 
 # Backend API
 NEXT_PUBLIC_API_URL="http://localhost:3000/api"
+
+# Vercel Blob Storage (for image uploads)
+# Get from: https://vercel.com/dashboard/stores
+BLOB_READ_WRITE_TOKEN="your-vercel-blob-token-here"
