--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.vercel
+
+# Temporary assistant files
+.gemini/
 
 # Logs
 npm-debug.log*
@@ -59,3 +63,6 @@ id_rsa.pub
 *.db-journal
 *.sqlite
 *.sqlite-journal
+
+# Neon CLI
+.neon
