--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
         run: npx prisma validate
         env:
           DATABASE_URL: "postgresql://user:password@localhost:5432/mountain_lovers?schema=public"
+          DIRECT_URL: "postgresql://user:password@localhost:5432/mountain_lovers?schema=public"
 
       - name: Run lint
         run: npm run lint
@@ -48,4 +49,5 @@ jobs:
         run: npm run build
         env:
           DATABASE_URL: "postgresql://user:password@localhost:5432/mountain_lovers?schema=public"
+          DIRECT_URL: "postgresql://user:password@localhost:5432/mountain_lovers?schema=public"
           JWT_SECRET: "dummy-secret-for-ci-build"
