--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "^1.3.1",
     "argon2": "^0.44.0",
     "class-variance-authority": "^0.7.1",
